--- a/config.json
+++ b/config.json
@@ -16,10 +16,10 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "─꯭─⃝‌‌𝐒𝐡𝐚𝐡𝐚𝐝𝐚𝐭 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
+    "BOTNAME": "─꯭─⃝‌‌𝐍𝐚𝐢𝐞𝐦 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
     "PREFIX": "/",
     "ADMINBOT": [
-        "61575698041722",
+        "61565096330972",
         "100001039692046",
         "100001039692046"
     ],
