--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,110 @@
-এখানে আপনার কুকি বসান ✅
+[
+	{
+		"key": "datr",
+		"value": "UdW2aOK4K5zWwUXjvSUOAVr-",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.386Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	},
+	{
+		"key": "sb",
+		"value": "UdW2aA5VtFyknHTJgxVm3NMb",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.387Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	},
+	{
+		"key": "m_pixel_ratio",
+		"value": "1.875",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.387Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	},
+	{
+		"key": "wd",
+		"value": "385x860",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.387Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	},
+	{
+		"key": "c_user",
+		"value": "61573833939029",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.387Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	},
+	{
+		"key": "xs",
+		"value": "41%3AeWryM4h2EmVMYw%3A2%3A1756812702%3A-1%3A-1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.387Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	},
+	{
+		"key": "fr",
+		"value": "0RDFTVglLLBlOZNSh.AWc6e64I-84tu9N5o2FMegrJ4KhwINTTNJi6jE2uJznA5NJsjR0.BottVR..AAA.0.0.BottWl.AWeCSb2GTrpuOjf1nMM2OuZ7n-o",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.387Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	},
+	{
+		"key": "locale",
+		"value": "en_US",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.387Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	},
+	{
+		"key": "pas",
+		"value": "61573833939029%3A3PqpvjGxc4",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.387Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	},
+	{
+		"key": "wl_cbv",
+		"value": "v2%3Bclient_version%3A2910%3Btimestamp%3A1756812710",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.387Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	},
+	{
+		"key": "fbl_st",
+		"value": "100421708%3BT%3A29280211",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.387Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	},
+	{
+		"key": "vpd",
+		"value": "v1%3B748x384x1.875",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T11:32:55.387Z",
+		"lastAccessed": "2025-09-02T11:32:55.387Z"
+	}
+]
