--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T11:41:57.786Z",
-		"lastAccessed": "2025-09-02T11:41:57.786Z"
+		"creation": "2025-09-02T14:14:31.263Z",
+		"lastAccessed": "2025-09-02T14:14:31.264Z"
 	},
 	{
 		"key": "sb",
@@ -14,8 +14,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T11:41:57.786Z",
-		"lastAccessed": "2025-09-02T11:41:57.786Z"
+		"creation": "2025-09-02T14:14:31.264Z",
+		"lastAccessed": "2025-09-02T14:14:31.264Z"
 	},
 	{
 		"key": "c_user",
@@ -23,8 +23,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T11:41:57.786Z",
-		"lastAccessed": "2025-09-02T11:41:57.786Z"
+		"creation": "2025-09-02T14:14:31.264Z",
+		"lastAccessed": "2025-09-02T14:14:31.264Z"
 	},
 	{
 		"key": "xs",
@@ -32,8 +32,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T11:41:57.786Z",
-		"lastAccessed": "2025-09-02T11:41:57.786Z"
+		"creation": "2025-09-02T14:14:31.264Z",
+		"lastAccessed": "2025-09-02T14:14:31.264Z"
 	},
 	{
 		"key": "locale",
@@ -41,8 +41,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T11:41:57.786Z",
-		"lastAccessed": "2025-09-02T11:41:57.786Z"
+		"creation": "2025-09-02T14:14:31.264Z",
+		"lastAccessed": "2025-09-02T14:14:31.264Z"
 	},
 	{
 		"key": "pas",
@@ -50,8 +50,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T11:41:57.786Z",
-		"lastAccessed": "2025-09-02T11:41:57.786Z"
+		"creation": "2025-09-02T14:14:31.264Z",
+		"lastAccessed": "2025-09-02T14:14:31.264Z"
 	},
 	{
 		"key": "vpd",
@@ -59,34 +59,52 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T11:41:57.786Z",
-		"lastAccessed": "2025-09-02T11:41:57.786Z"
+		"creation": "2025-09-02T14:14:31.264Z",
+		"lastAccessed": "2025-09-02T14:14:31.264Z"
+	},
+	{
+		"key": "ps_l",
+		"value": "1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T14:14:31.264Z",
+		"lastAccessed": "2025-09-02T14:14:31.264Z"
+	},
+	{
+		"key": "ps_n",
+		"value": "1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T14:14:31.264Z",
+		"lastAccessed": "2025-09-02T14:14:31.264Z"
 	},
 	{
 		"key": "fr",
-		"value": "0RDFTVglLLBlOZNSh.AWd1qhv1KsYVsdW8Ok5lmGl0ppkEIQNzJYz2ltxCfnt6JSpTzmM.BottVR..AAA.0.0.Bottf7.AWdwmbdAY_hu5bzggMmDP8fBjSc",
+		"value": "0RDFTVglLLBlOZNSh.AWdsAdgwP5U4nv_M8U0TeB-ou3xFr6BM9KjOqetUg3Twze-xmZQ.BottVR..AAA.0.0.Botvur.AWd3z_CNS-OqiMWNtrEBM012EKo",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T11:41:57.786Z",
-		"lastAccessed": "2025-09-02T11:41:57.786Z"
-	},
-	{
-		"key": "fbl_st",
-		"value": "100422150%3BT%3A29280221",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-09-02T11:41:57.786Z",
-		"lastAccessed": "2025-09-02T11:41:57.786Z"
+		"creation": "2025-09-02T14:14:31.265Z",
+		"lastAccessed": "2025-09-02T14:14:31.265Z"
 	},
 	{
 		"key": "wl_cbv",
-		"value": "v2%3Bclient_version%3A2910%3Btimestamp%3A1756813307",
+		"value": "v2%3Bclient_version%3A2910%3Btimestamp%3A1756822443",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T11:41:57.787Z",
-		"lastAccessed": "2025-09-02T11:41:57.787Z"
+		"creation": "2025-09-02T14:14:31.265Z",
+		"lastAccessed": "2025-09-02T14:14:31.265Z"
+	},
+	{
+		"key": "fbl_st",
+		"value": "100417768%3BT%3A29280374",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T14:14:31.265Z",
+		"lastAccessed": "2025-09-02T14:14:31.265Z"
 	}
 ]
