--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Made By SHAHADAT SAHU",
   "main": "Main.js",
   "engines": {
-    "node": ">=20.18.1",
+    "node": "20.x",
     "npm": ">=10.0.0 <13.0.0"
   },
   "scripts": {
@@ -21,10 +21,10 @@
     "facebook",
     "shahadatproject",
     "messenger",
-    "javasvript",
+    "javascript",
     "shadat",
     "ullash",
-    "cybersahu ",
+    "cybersahu",
     "shahadat chat bot"
   ],
   "author": "SHAHADAT SAHU",
@@ -108,6 +108,7 @@
     "simple-youtube-api": "^5.2.1",
     "soundcloud-downloader": "^1.0.0",
     "sqlite3": "^5.1.1",
+    "better-sqlite3": "^9.4.0",
     "string-similarity": "^4.0.4",
     "systeminformation": "^5.21.11",
     "shaon-videos-downloader": "^1.0.1",
