--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
     "PASSWORD": "",
     "OTPKEY": "",
     "BOTNAME": "─꯭─⃝‌‌𝐍𝐚𝐢𝐞𝐦 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
-    "PREFIX": "/",
+    "PREFIX": ".",
     "ADMINBOT": [
         "61560905313424",
         "100001039692046",
