--- a/appstate.json
+++ b/appstate.json
@@ -1,75 +1,21 @@
 [
 	{
 		"key": "dbln",
-		"value": "%7B%2261561467064374%22%3A%22u1WFnpA5%22%7D",
+		"value": "%7B%2261561467064374%22%3A%22yloYbc1F%22%7D",
 		"domain": "facebook.com",
 		"path": "/login/device-based/",
 		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.079Z",
-		"lastAccessed": "2025-09-02T19:56:40.080Z"
+		"creation": "2025-09-02T22:32:38.216Z",
+		"lastAccessed": "2025-09-02T22:32:38.216Z"
 	},
 	{
 		"key": "datr",
-		"value": "hE-zaBYEs2d9BGuQUxNuZeVz",
+		"value": "FnC3aKpYUk5So34GJD8tiIDZ",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.081Z",
-		"lastAccessed": "2025-09-02T19:56:40.081Z"
-	},
-	{
-		"key": "sb",
-		"value": "hE-zaPK_d_ehyCoSBoM0yTQM",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.081Z",
-		"lastAccessed": "2025-09-02T19:56:40.081Z"
-	},
-	{
-		"key": "c_user",
-		"value": "61561467064374",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.081Z",
-		"lastAccessed": "2025-09-02T19:56:40.081Z"
-	},
-	{
-		"key": "xs",
-		"value": "31%3AkdMijW6khV99DA%3A2%3A1756581797%3A-1%3A-1",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.081Z",
-		"lastAccessed": "2025-09-02T19:56:40.081Z"
-	},
-	{
-		"key": "locale",
-		"value": "en_US",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.081Z",
-		"lastAccessed": "2025-09-02T19:56:40.081Z"
-	},
-	{
-		"key": "pas",
-		"value": "61561467064374%3A11TvGuNbEx",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.081Z",
-		"lastAccessed": "2025-09-02T19:56:40.081Z"
-	},
-	{
-		"key": "fr",
-		"value": "0yX63X0lhpQeP9gRH.AWeuFvzTjxIDtUfyMQC7i9xAhRXN-tn75dToIU5hiaS5IiPMOIo.Bos0-E..AAA.0.0.Bot0vp.AWe-OH1UbUnTvbNhDWGA2mHCyAw",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.081Z",
-		"lastAccessed": "2025-09-02T19:56:40.081Z"
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
 	},
 	{
 		"key": "ps_l",
@@ -77,8 +23,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.081Z",
-		"lastAccessed": "2025-09-02T19:56:40.081Z"
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
 	},
 	{
 		"key": "ps_n",
@@ -86,8 +32,98 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.082Z",
-		"lastAccessed": "2025-09-02T19:56:40.082Z"
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
+	},
+	{
+		"key": "sb",
+		"value": "FnC3aLIEyDWFcE21HTHTxU16",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
+	},
+	{
+		"key": "m_pixel_ratio",
+		"value": "1.875",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
+	},
+	{
+		"key": "wd",
+		"value": "385x860",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
+	},
+	{
+		"key": "c_user",
+		"value": "61561467064374",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
+	},
+	{
+		"key": "xs",
+		"value": "21%3AiTbkOeqtl8mP4A%3A2%3A1756852300%3A-1%3A-1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
+	},
+	{
+		"key": "fr",
+		"value": "0GygXPYuxZW6V9apy.AWdKu5sqJQTdQKQUEiQ9P5-lnUXodsCEw9CsbVxbn7KHf8AzvLs.Bot3AW..AAA.0.0.Bot3BT.AWfpj7kUaTiUJ_tchLj5A6OsHxE",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
+	},
+	{
+		"key": "locale",
+		"value": "en_US",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
+	},
+	{
+		"key": "pas",
+		"value": "61561467064374%3AfSGSFr4zw9",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
+	},
+	{
+		"key": "wl_cbv",
+		"value": "v2%3Bclient_version%3A2911%3Btimestamp%3A1756852307",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
+	},
+	{
+		"key": "fbl_st",
+		"value": "100638472%3BT%3A29280871",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
 	},
 	{
 		"key": "vpd",
@@ -95,25 +131,7 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.082Z",
-		"lastAccessed": "2025-09-02T19:56:40.082Z"
-	},
-	{
-		"key": "fbl_st",
-		"value": "101720391%3BT%3A29280716",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.082Z",
-		"lastAccessed": "2025-09-02T19:56:40.082Z"
-	},
-	{
-		"key": "wl_cbv",
-		"value": "v2%3Bclient_version%3A2911%3Btimestamp%3A1756842985",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-09-02T19:56:40.082Z",
-		"lastAccessed": "2025-09-02T19:56:40.082Z"
+		"creation": "2025-09-02T22:32:38.217Z",
+		"lastAccessed": "2025-09-02T22:32:38.217Z"
 	}
-]
+		]
