--- a/config.json
+++ b/config.json
@@ -16,11 +16,11 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "─꯭─⃝‌‌𝐍𝐚𝐢𝐞𝐦 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
+    "BOTNAME": "─꯭─⃝‌‌𝐌𝐞𝐰 𝐐𝐮𝐞𝐞𝐧 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
     "PREFIX": ".",
     "ADMINBOT": [
         "61560905313424",
-        "100001039692046",
+        "61564223975295",
         "100001039692046"
     ],
     "NDH": [
