--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
 		"domain": "facebook.com",
 		"path": "/login/device-based/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.890Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.425Z",
+		"lastAccessed": "2025-09-03T14:36:19.428Z"
 	},
 	{
 		"key": "datr",
@@ -14,8 +14,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.428Z",
+		"lastAccessed": "2025-09-03T14:36:19.428Z"
 	},
 	{
 		"key": "ps_l",
@@ -23,8 +23,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.428Z",
+		"lastAccessed": "2025-09-03T14:36:19.428Z"
 	},
 	{
 		"key": "ps_n",
@@ -32,8 +32,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.428Z",
+		"lastAccessed": "2025-09-03T14:36:19.428Z"
 	},
 	{
 		"key": "sb",
@@ -41,8 +41,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.428Z",
+		"lastAccessed": "2025-09-03T14:36:19.428Z"
 	},
 	{
 		"key": "locale",
@@ -50,8 +50,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.428Z",
+		"lastAccessed": "2025-09-03T14:36:19.428Z"
 	},
 	{
 		"key": "vpd",
@@ -59,8 +59,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.428Z",
+		"lastAccessed": "2025-09-03T14:36:19.428Z"
 	},
 	{
 		"key": "c_user",
@@ -68,8 +68,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.428Z",
+		"lastAccessed": "2025-09-03T14:36:19.428Z"
 	},
 	{
 		"key": "xs",
@@ -77,8 +77,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.428Z",
+		"lastAccessed": "2025-09-03T14:36:19.428Z"
 	},
 	{
 		"key": "pas",
@@ -86,34 +86,52 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.429Z",
+		"lastAccessed": "2025-09-03T14:36:19.429Z"
+	},
+	{
+		"key": "m_pixel_ratio",
+		"value": "1.875",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-03T14:36:19.429Z",
+		"lastAccessed": "2025-09-03T14:36:19.429Z"
+	},
+	{
+		"key": "wd",
+		"value": "385x860",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-09-03T14:36:19.429Z",
+		"lastAccessed": "2025-09-03T14:36:19.429Z"
 	},
 	{
 		"key": "fr",
-		"value": "0GygXPYuxZW6V9apy.AWfqbPkGKR7D2jC6Ilr1RYjFeK6RdeG_jKEHBdW5tHbuKnMTpOg.Bot3AW..AAA.0.0.BouEuY.AWc3kl-t4yPhA8Of8-Pj-8p2kCc",
+		"value": "0GygXPYuxZW6V9apy.AWe7CVSHnevZSObqODL04wEzlr8viXG06YYY2dEKO0IRYTTqZTQ.Bot3AW..AAA.0.0.BouFEq.AWdMgHD1G9UnorCp859r8QkOjIY",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.429Z",
+		"lastAccessed": "2025-09-03T14:36:19.429Z"
 	},
 	{
 		"key": "fbl_st",
-		"value": "100627005%3BT%3A29281807",
+		"value": "100630358%3BT%3A29281831",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.429Z",
+		"lastAccessed": "2025-09-03T14:36:19.429Z"
 	},
 	{
 		"key": "wl_cbv",
-		"value": "v2%3Bclient_version%3A2911%3Btimestamp%3A1756908440",
+		"value": "v2%3Bclient_version%3A2911%3Btimestamp%3A1756909866",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-09-03T14:07:30.891Z",
-		"lastAccessed": "2025-09-03T14:07:30.891Z"
+		"creation": "2025-09-03T14:36:19.429Z",
+		"lastAccessed": "2025-09-03T14:36:19.429Z"
 	}
 ]
